<resources>
    <string name="app_name">Cardiac Custodian</string>
    <string name="title_activity_main">Cardiac Custodian</string>

    <string name="nav_drawer_username">Username</string>
    <string name="nav_drawer_user_password">user.password@example.com</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!-- Navigation drawer open/close -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer item list -->
    <string name="menu_main_map">Main Map</string>
    <string name="menu_map_defi">Show defibrillator</string>
    <string name="menu_first_aid_instruction">First Aid Instruction</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_send_feedback">Send feedback</string>
</resources>
